--- a/wireshark/practice-2025-11-24.md
+++ b/wireshark/practice-2025-11-24.md
@@ -33,3 +33,15 @@
   - If I set a capture filter like `tcp port 22`, ICMP packets are never recorded.
   - Display filters (`icmp`, `tcp.port == 22`) only show protocols that are actually in the capture.
 - What ping (ICMP) and SSH (TCP/22) traffic look like on the wire.
+
+## Screenshots
+
+![ICMP ping from Kali to Ubuntu](./screenshots/icmp-ping-kali-ubuntu.png)
+
+### SSH traffic filtered by tcp.port == 22
+
+![SSH traffic on TCP port 22 between Kali and Ubuntu](./screenshots/ssh-tcp22-filter.png)
+
+### SSH traffic filtered by ip.addr
+
+![All traffic to/from Ubuntu using ip.addr filter](./screenshots/ssh-ipaddr-filter.png)
